--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,5 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark mb-3">
+  <div class="container">
+    <a class="navbar-brand text-white" href="#">DevLogger</a>
+  </div>
+</nav>
